# model-service

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  deploy.sh  mkdocs.yml  pyproject.toml  ray-service-cpu.yaml  ray-service.yaml
.github/workflows/: build-docs.yml  docker-build-push.yml
builders/: heatmap_builder.py  test_runner.py  wsi_normalizer.py
docker/: Dockerfile.cpu  Dockerfile.gpu
docs/: index.md
docs/architecture/: batching.md  overview.md  queues-and-backpressure.md  request-lifecycle.md
docs/get-started/: quick-start.md
docs/guides/: adding-models.md  configuration-reference.md  deployment-guide.md  troubleshooting.md
docs/reference/: configuration-reference.md
helm/rayservice/: Chart.yaml  values.yaml
kustomize/base/: kustomization.yaml  ray-service-base.yaml
kustomize/overlays/: kustomization.yaml
misc/: download_virchow.py  fetch_tissue_tile.py  k8s_downloader_job.yaml  tile_heatmap_builder.py  tile_wsi_normalizer.py
misc/virchow2_downloader/: virchow2_downloader_job.yaml
models/: __init__.py  binary_classifier.py  gigapath_model.py  gigapath_slide_encoder.py  lsp_detr.py  prostate_onnx.py  semantic_segmentation.py  stain_normalization.py  virchow2.py
providers/: model_provider.py
pvc/: huggingface-pvc.yaml  mlflow-cache-pvc.yaml  model-test-refs-pvc.yaml  tensorrt-cache-pvc.yaml
rayservice/base/: ray-service-base.yaml
tests/: README-model-snapshots.md  load_test.py
tests/benchmark/: benchmark_batch_size.py
tests/model_snapshots/: _shared.py  generate_references.py  test_binary_classifier_model_snapshot.py  (+1 more)
(+44 files in other folders)
