[project]
name = "model-service"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fairscale",
    "numpy",
    "timm",
    "torch==2.8.0",
    "flash-attn @ https://github.com/MiroPsota/torch_packages_builder/releases/download/flash_attn-2.8.3/flash_attn-2.8.3%2Bpt2.8.0cu129-cp312-cp312-linux_x86_64.whl",
    "fastapi>=0.118.3",
    "ray>=2.49.2",
]
