[project]
name = "model-service"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "lz4>=4.4.5",
    "mlflow<3.0",
    "onnxruntime>=1.23.2",
    "pillow>=11.3.0",
    "ray[serve]>=2.48.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.6"]
