[project]
name = "model-service"
version = "0.1.0"
authors = [
    { name = "Matěj Pekár", email = "matejpekar@mail.muni.cz" },
    { name = "Jiří Štípek", email = "567776@mail.muni.cz" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "lz4>=4.4.5",
    "mlflow<3.0",
    "onnxruntime>=1.23.2",
    "pillow>=11.3.0",
    "ratiopath>=1.0.3",
    "ray[serve]>=2.48.0",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.6", "pytest>=8.4.2"]

[tool.pytest.ini_options]
pythonpath = ["tests/model_snapshots"]
